--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
@@ -34,7 +34,7 @@
                                                                 :sidebarExpanded="isExpanded"
                                                                 :entry="entry"
                                                                 :key="entry.id || entry.path"
-                                                                :class="['sw-admin-menu__item--' + index, entry.label]">
+                                                                :class="['sw-admin-menu__item--' + entry.id, entry.label]">
                                             </sw-admin-menu-item>
                                         {% endblock %}
                                     </ul>
@@ -150,7 +150,8 @@
 
                         {% block sw_admin_menu_flyout_list %}
                             <ul v-if="flyoutEntries" class="sw-admin-menu__flyout-list">
-                                <sw-admin-menu-item v-for="entry in flyoutEntries"
+                                <sw-admin-menu-item v-for="(entry, index) in flyoutEntries"
+                                                    :class="['sw-admin-menu__flyout-item--' + entry.id]"
                                                     :entry="entry"
                                                     :key="entry.id || entry.path"
                                                     :collapsibleText="false"
