--- a/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.scss
+++ b/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.scss
@@ -4,18 +4,17 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
         max-width: 800px;
-        margin: 0 auto 40px auto;
+        margin: 0 auto 10px auto;
 
         @media screen and (max-width: 1360px) {
             max-width: 770px;
-            margin-bottom: 30px;
         }
 
     }
 
     .sw-empty-state {
-        position:relative;
+        position: relative;
     }
 }
