--- a/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.scss
+++ b/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.scss
@@ -8,6 +8,7 @@ $sw-simple-search-field-search-icon-color: $color-gutenberg;
     .sw-simple-search-field__input {
         input {
             padding: 0 20px 0 44px;
+            height: 32px;
         }
     }
 
