--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -47,6 +47,13 @@
                                 {{ $tc('sw-customer.detail.tabAddresses') }}
                             </sw-tabs-item>
                         {% endblock %}
+
+                        {% block sw_customer_detail_content_tab_order %}
+                            <sw-tabs-item :route="{ name: 'sw.customer.detail.order', params: { id: $route.params.id } }"
+                                          :title="$tc('sw-customer.detailBase.labelOrderCard')">
+                                {{ $tc('sw-customer.detailBase.labelOrderCard') }}
+                            </sw-tabs-item>
+                        {% endblock %}
                     </sw-tabs>
                 {% endblock %}
 
