--- a/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
@@ -42,7 +42,7 @@
                 <template slot="columns" slot-scope="{ item }">
                     {% block sw_sales_channel_grid_columns %}
                         {% block sw_sales_channel_grid_columns_icon %}
-                            <sw-grid-column flex="80px" dataIndex="icon">
+                            <sw-grid-column flex="85px" dataIndex="icon" class="sw-sales-channel-modal__grid-icon-column">
                                 <span class="sw-sales-channel-modal__grid-icon">
                                     <sw-icon v-if="item.iconName" :name="item.iconName">
                                     </sw-icon>
@@ -51,7 +51,7 @@
                         {% endblock %}
 
                         {% block sw_sales_channel_grid_columns_content %}
-                            <sw-grid-column flex="minmax(200px, 1fr)" dataIndex="content">
+                            <sw-grid-column flex="minmax(150px, 1fr)" dataIndex="content">
                                 <div class="sw-sales-channel-modal__grid-item-content">
                                     <h3 class="sw-sales-channel-modal__grid-item-name">{{ item.meta.viewData.name }}</h3>
                                     <div class="sw-sales-channel-modal__grid-item-description">{{ item.meta.viewData.description }}</div>
@@ -123,7 +123,7 @@
 
         {% block sw_sales_channel_modal_footer %}
             <template slot="modal-footer">
-                <div v-if="detailType">
+                <template v-if="detailType">
                     {% block sw_sales_channel_modal_footer_detail_actions %}
                         {% block sw_sales_channel_modal_footer_back %}
                             <sw-button size="small" @click.prevent="detailType = false" :disabled="isLoading">
@@ -137,17 +137,17 @@
                             </sw-button>
                         {% endblock %}
                     {% endblock %}
-                </div>
+                </template>
 
-                <div v-else>
+                <template v-else>
                     {% block sw_sales_channel_modal_footer_actions %}
                         {% block sw_sales_channel_modal_footer_cancel %}
-                        <sw-button size="small" @click="onCloseModal">
-                            {{ $tc('sw-sales-channel.modal.buttonCancel') }}
-                        </sw-button>
+                            <sw-button size="small" @click="onCloseModal">
+                                {{ $tc('sw-sales-channel.modal.buttonCancel') }}
+                            </sw-button>
                         {% endblock %}
                     {% endblock %}
-                </div>
+                </template>
             </template>
         {% endblock %}
     </sw-modal>
